--- a/css/buttons.css
+++ b/css/buttons.css
@@ -1,3 +1,15 @@
+
+.txtformat{
+    position: absolute;
+    font-size: 1.25vw;
+    font-weight: bold;
+    font-family: 'Outfit', sans-serif;
+    color: black;
+    margin-top: 15.5vw;
+    margin-left: 1vw;
+}
+
+/*Button names*/
 .nf1-size1,.nf1-size2,
 .nf2-size1,.nf2-size2,
 .nf3-size1,.nf3-size2,
@@ -9,12 +21,14 @@
 .nf9-size1,.nf9-size2{
     position: relative;
     top: 17.8vw;
+    left: 1vw;
     padding: 0.4vw .75vw;
     font-size: 1vw;
     border-radius: 5px 5px 5px 5px;
     font-weight: 600;
     margin-left: 1vw;
-    color: #15154E;
+    color: black;
+    border-color: black;
     font-family: 'Outfit', sans-serif;
     cursor: pointer;
 }
@@ -31,6 +45,7 @@
 .fs9-size1,.fs9-size2{
     position: relative;
     top: 17.8vw;
+    left: 1vw;
     padding: 0.4vw .75vw;
     font-size: 1vw;
     border-radius: 5px 5px 5px 5px;
@@ -46,6 +61,7 @@
 .ls3-size1,.ls3-size2{
     position: relative;
     top: 17.8vw;
+    left: 1vw;
     padding: 0.4vw .75vw;
     font-size: 1vw;
     border-radius: 5px 5px 5px 5px;
@@ -63,6 +79,7 @@
     top: 17.8vw;
     padding: 0.4vw .75vw;
     font-size: 1vw;
+    left: 1vw;
     border-radius: 5px 5px 5px 5px;
     font-weight: 600;
     margin-left: 1vw;
@@ -73,8 +90,8 @@
 
 .os4-size1,.os4-size2{
     position: relative;
-    top: 16.5vw;
-    left: .8vw;
+    top: 18vw;
+    left: 1vw;
     padding: 0.4vw .75vw;
     font-size: 1vw;
     border-radius: 5px 5px 5px 5px;
@@ -99,6 +116,7 @@
 .cs12-size1,.cs12-size2{
     position: relative;
     top: 17.8vw;
+    left: 1vw;
     padding: 0.4vw .75vw;
     font-size: 1vw;
     border-radius: 5px 5px 5px 5px;
@@ -121,6 +139,7 @@
 {
     position: relative;
     top: 17.8vw;
+    left: 1vw;
     padding: 0.4vw .75vw;
     font-size: 1vw;
     border-radius: 5px 5px 5px 5px;
@@ -136,6 +155,7 @@
 .choco3-size1,.choco3-size2{
     position: relative;
     top: 17.8vw;
+    left: 1vw;
     padding: 0.4vw .75vw;
     font-size: 1vw;
     border-radius: 5px 5px 5px 5px;
@@ -203,4 +223,18 @@
     transition: background-color 0.3s, color 0.3s;
     background-color: #15154E;
     color: #F9F6EE;
+}
+
+/* Style the scrollbar in WebKit browsers */
+.new-flavors-divider::-webkit-scrollbar {
+    width: .5vw; /* Set the width of the scrollbar */
+    padding-left: 2vw;
+}
+
+.new-flavors-divider::-webkit-scrollbar-thumb {
+    background-color: #8E8EDB; /* Set the color of the thumb */
+}
+
+.new-flavors-divider::-webkit-scrollbar-track {
+    background-color: #15154E; /* Set the color of the track */
 }
