--- a/css/OurProducts.css
+++ b/css/OurProducts.css
@@ -7,6 +7,7 @@
 }
 
 body {
+    animation: transitionIn 0.75s;
     background: url(../img/BG-CIRCLES.png);
     background-position: center;
     background-size: cover;
@@ -18,6 +19,18 @@ body {
 html{
     font-size: 16px;
 }
+
+::-webkit-scrollbar {
+    width: 6px; /* Set the width of the scrollbar */
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #15154E; /* Set the color of the thumb (the draggable part) */
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: #8E8EDB; /* Set the color of the track (the non-draggable part) */
+  }
 
 /* NAVIGATION BAR PAGE SECTION*/
 
@@ -385,4 +398,65 @@ nav ul li a{
     padding-left: -2vw;
     line-height: 2vw;
 }
+
+/*SEARCH BAR*/
+
+.search-container {
+    position: absolute;
+    display: flex;
+    margin-top: -4.2vw;
+    margin-left: 28.1vw;
+  }
+
+  .search-input {
+    position: relative;
+    padding: .5vw;
+    padding-left: 1.2vw;
+    font-size: 1.35vw;
+    font-family: 'Outfit', sans-serif;
+    border: .2vw solid #6C63FF;
+    border-radius: 5vw;
+    width: 18vw;
+  }
+
+  .search-button {
+    position: relative;
+    background-color: #6C63FF;
+    font-size: 1vw;
+    color: #fff;
+    border: none;
+    border-radius: 10vw;
+    cursor: pointer;
+    padding: 1vw 1vw;
+    margin-left: -3.8vw;
+    font-family: 'Outfit', sans-serif;
+  }
+  
+  .search-input:focus {
+    outline: none;
+    border-color: #15154E;
+  }
+  
+  .search-button:hover {
+    background-color: #8B83FF;
+    color: #000;
+    font-weight: 600;
+  }
+
+
+  .pic-size{
+    position: absolute;
+    left: 1vw;
+    top: 1.2vw;
+    width: 15.35vw;
+    height: 13.5vw;
+    border-radius: 1vw;
+  }
+
+  .search-icon{
+    position: relative;
+    width: 28px;
+    padding: 2px 2px 2px 2px;
+  }
+  
 
