--- a/css/styles.css
+++ b/css/styles.css
@@ -806,3 +806,136 @@ nav ul li a{
     padding-left: -2vw;
     line-height: 2vw;
 }
+
+.cart-container {
+    position: fixed;
+    top: 6.8vw;
+    right: -300vw;
+    width: 22vw;
+    height: 85%;
+    background-color: #fff;
+    border-radius: 25px 25px 25px 25px;
+    border: 2px solid #15154E ;
+    transition: right 0.3s ease-in-out;
+    display: flex;
+    flex-direction: column;
+    align-items: center;  
+}
+
+.cart-header {
+    display: flex;
+    position: relative;
+    align-items: center;
+    background-color: #89D0D1;
+    color: #15154E;
+    padding: 10px;
+    width: 12vw;
+    height: 3.8vw;
+    top: 8px;
+    text-align: center;
+    font-size: 1.8vw;
+    font-weight: 600;
+    border-radius: 40px;
+    margin: 16px auto;
+}
+
+.cart-icon {
+    position: block;
+    margin-top: 0px;
+    padding-left: .8vw;
+    width: 3.4vw;
+}
+
+.my-cart {
+    display:block;
+    margin-top: 0vw;
+    font-size: 1.8vw;
+    padding-left: 0vw;
+}
+
+#cartItems {
+    max-height: 30vw; /* Set a maximum height as needed */
+    overflow-y: auto; /* Enable vertical scrolling if content overflows */
+    padding: 0; /* Remove default padding to prevent extra space */
+    list-style-type: none; /* Remove default list styling */
+}
+
+
+.cart-items {
+padding: 10px;
+}
+
+.open-cart-button {
+cursor: pointer;
+}
+
+.cart-item-container {
+display: flex;
+border: 2px solid #15154E;  
+border-radius: 25px 25px 25px 25px;
+background-color: rgba(170, 217, 217, 0.3);    
+padding: 15px;
+margin-bottom: .5vw;
+width: 20.5vw;
+margin-left:6px;
+font-family: 'Outfit', sans-serif;
+font-weight: 505;
+}
+
+.cart{
+display: flex;
+position: absolute;
+top: 1.09vw;
+width: 2.73vw;
+}
+
+.cart-item-image {
+font-family: 'Outfit', sans-serif;
+width: 80px; /* Set your desired width */
+height: 80px; /* Set your desired height */
+border-radius: 20px 20px 20px 20px;
+margin-right: 10px;
+border-radius: 5px;
+}
+
+.cart-item-text {
+/* Add styles for the text within the cart item */
+font-size: 20px;
+color: black; /* Adjust the color as needed */
+}
+
+
+/*CART SUMMARY*/
+
+/* Add this updated CSS */
+.checkout-div {
+position: fixed;
+display: flex;
+flex-direction: column;
+align-items: center;
+margin-top: 36.5vw; /* Adjust the margin as needed */
+margin-left: .0vw;
+height: 4.5vw;
+width: 21.9vw;
+background-color: #ACACFF;
+border-radius: 0px 0px 23px 23px;
+border: 1px solid black;
+}
+
+#checkoutButton {
+margin-top: 14px; /* Adjust the margin as needed */
+font-family: 'Outfit', sans-serif;
+background-color: #89D0D1;
+color: white;
+border: none;
+font-size: 1vw;
+padding: 5px 15px 5px 15px;
+border-radius: 5px 5px 5px 5px;
+}
+
+.final-amount{
+font-family: 'Outfit', sans-serif;
+color: #15154E;
+font-weight: 600;
+}
+
