--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background: url(../img/BG-CIRCLES.png);
+    background: url(../images/img/BG-CIRCLES.png);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -248,7 +248,7 @@ nav ul li a{
     text-shadow: 2px 2px 4px rgba(0, 0, 0, .2);
 }
 
-.rounded-bottom-square1 {
+  .new-flavor-container1 {
     position: relative;
     width: 100%;
     height: 100vw;
@@ -261,7 +261,7 @@ nav ul li a{
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
   }
 
-  .rounded-bottom-square2 {
+  .new-flavor-container2 {
     position: relative;
     width: 100vw;
     height: 100vw;
@@ -274,7 +274,7 @@ nav ul li a{
     transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
   }
 
-  .rounded-bottom-square3 {
+  .new-flavor-container3 {
     position: relative;
     width: 100vw;
     height: 100vw;
@@ -312,17 +312,15 @@ nav ul li a{
   }
   
 
-  .rounded-bottom-square1:hover,
-  .rounded-bottom-square2:hover,
-  .rounded-bottom-square3:hover{
+  .new-flavor-container1:hover,
+  .new-flavor-container2:hover,
+  .new-flavor-container3:hover{
     transform: scale(1.15);
     z-index:1;
     box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.5);
   }
 
-  .name-bestsellers1,
-  .name-bestsellers2,
-  .name-bestsellers3{
+  .txtformat{
     position: relative;
     top: 25.5vw;
     left: 1.4vw;
@@ -425,6 +423,7 @@ nav ul li a{
     left: 20vw;
     width: 3vw;
   }
+  
 
 /*PLACE PAGE SECTION*/
 
@@ -740,7 +739,7 @@ nav ul li a{
 
 .middle-name-logo{
     position: absolute;
-    margin-top: -13.5vw;
+    margin-top: -10.5vw;
     margin-left: 47.5vw;
 }
 
@@ -794,7 +793,7 @@ nav ul li a{
     font-family: 'Outfit', sans-serif;
     font-size: 1.5vw;
     color: #F9F6EE;
-    bottom: 13.5vw;
+    bottom: 10.8vw;
     padding-right: 12.5vw;
     position: relative;
     float: right;
@@ -807,12 +806,12 @@ nav ul li a{
     line-height: 2vw;
 }
 
-.cart-container {
+  .cart-container {
     position: fixed;
     top: 6.8vw;
     right: -300vw;
     width: 22vw;
-    height: 85%;
+    height: 41.2vw;
     background-color: #fff;
     border-radius: 25px 25px 25px 25px;
     border: 2px solid #15154E ;
@@ -820,9 +819,9 @@ nav ul li a{
     display: flex;
     flex-direction: column;
     align-items: center;  
-}
+  }
 
-.cart-header {
+  .cart-header {
     display: flex;
     position: relative;
     align-items: center;
@@ -831,111 +830,240 @@ nav ul li a{
     padding: 10px;
     width: 12vw;
     height: 3.8vw;
-    top: 8px;
+    top: 0vw;
     text-align: center;
     font-size: 1.8vw;
     font-weight: 600;
     border-radius: 40px;
     margin: 16px auto;
-}
+  }
 
-.cart-icon {
+  .cart-icon {
     position: block;
     margin-top: 0px;
     padding-left: .8vw;
     width: 3.4vw;
-}
+  }
 
-.my-cart {
-    display:block;
+  .my-cart {
+    display:flex;
     margin-top: 0vw;
-    font-size: 1.8vw;
+    font-size: 1.6vw;
     padding-left: 0vw;
-}
+  }
 
-#cartItems {
-    max-height: 30vw; /* Set a maximum height as needed */
-    overflow-y: auto; /* Enable vertical scrolling if content overflows */
-    padding: 0; /* Remove default padding to prevent extra space */
-    list-style-type: none; /* Remove default list styling */
-}
+  #cartItems {
+    margin-top: 0vw;
+    position: relative;
+    max-height: 72.5%;
+    overflow-y: auto;
+    overflow-x: hidden;
+    padding: 0;
+    list-style-type: none;
+  }
+  
+  #cartItems::-webkit-scrollbar {
+    width: 0.5em; /* Set a width for the scrollbar */
+  }
+  
+  #cartItems::-webkit-scrollbar-track {
+    background-color: transparent; /* Make the track transparent */
+  }
+  
+  #cartItems::-webkit-scrollbar-thumb {
+    background-color: transparent; /* Set a color for the thumb (the draggable part) */
+    border-radius: 0.25em; /* Set border-radius for a rounded thumb appearance */
+  }
+  
+
+  .open-cart-button {
+    cursor: pointer;
+  }
+
+  .cart-item-container {
+    display: flex;
+    position: relative;
+    border: .15vw solid #15154E;
+    border-radius: 2vw 2vw 2vw 2vw;
+    background-color: rgba(170, 217, 217, 0.3);
+    padding: 1vw;
+    margin-bottom: .5vw;
+    width: 20.5vw;
+    height: 7vw;
+    margin-left: 6px;
+    font-family: 'Outfit', sans-serif;
+    font-weight: 505;
+  }
+  
+  .cart {
+    display: flex;
+    position: absolute;
+    top: 1.09vw;
+    width: 2.73vw;
+  }
+  
+  .cart-item-image {
+    font-family: 'Outfit', sans-serif;
+    width: 5vw; /* Set your desired width */
+    border-radius: 45px 45px 45px 45px;
+    margin-right: 10px;
+    border-radius: 5px;
+  }
+  
+  .cart-item-text {
+    /* Add styles for the text within the cart item */
+    position:static;
+    padding-left: 6vw;
+    margin-top: -5.9vw;
+    font-size: 1vw;
+    line-height: 1.4vw;
+    color: #15154E; /* Adjust the color as needed */
+    font-weight: 600;
+    overflow-y: hidden;
+  }
+
+  .cart-item-price{
+    position:static;
+    padding-left: 14.5vw;
+    margin-top: -2vw;
+    font-size: 1.2vw;
+    color: #15154E; /* Adjust the color as needed */
+    overflow-y: hidden;
+  }
+  
+  .cart-items {
+    padding: 10px;
+    overflow-y: hidden;
+  }
+
+    
+  .quantity-container{
+    position: relative;
+    display: flex;
+    left: 6vw;
+    top: 0.7vw;
+    overflow-y: hidden;
+  }
+
+  .quantity-textbox {
+    color: #15154E; /* Text color */
+    border: none; /* Remove default border */
+    outline: none; /* Remove focus outline */
+    background-color: transparent; /* Make background transparent */
+    font-weight: 600;
+    font-size: 1.5vw;
+    pointer-events: none;
+    position:relative;
+    left: .4vw;
+  }
 
 
-.cart-items {
-padding: 10px;
-}
-
-.open-cart-button {
-cursor: pointer;
-}
-
-.cart-item-container {
-display: flex;
-border: 2px solid #15154E;  
-border-radius: 25px 25px 25px 25px;
-background-color: rgba(170, 217, 217, 0.3);    
-padding: 15px;
-margin-bottom: .5vw;
-width: 20.5vw;
-margin-left:6px;
-font-family: 'Outfit', sans-serif;
-font-weight: 505;
-}
-
-.cart{
-display: flex;
-position: absolute;
-top: 1.09vw;
-width: 2.73vw;
-}
-
-.cart-item-image {
-font-family: 'Outfit', sans-serif;
-width: 80px; /* Set your desired width */
-height: 80px; /* Set your desired height */
-border-radius: 20px 20px 20px 20px;
-margin-right: 10px;
-border-radius: 5px;
-}
-
-.cart-item-text {
-/* Add styles for the text within the cart item */
-font-size: 20px;
-color: black; /* Adjust the color as needed */
-}
+  .delete-button{
+    position: relative;
+    font-size: 1vw;
+    left: 14.5vw;
+    top: -.9vw;
+  }
+  
 
 
 /*CART SUMMARY*/
 
-/* Add this updated CSS */
-.checkout-div {
-position: fixed;
-display: flex;
-flex-direction: column;
-align-items: center;
-margin-top: 36.5vw; /* Adjust the margin as needed */
-margin-left: .0vw;
-height: 4.5vw;
-width: 21.9vw;
-background-color: #ACACFF;
-border-radius: 0px 0px 23px 23px;
-border: 1px solid black;
-}
+  .checkout-div {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    top: 14.8vw;
+    margin-top: 100%; /* Adjust the margin as needed */
+    margin-left: .0vw;
+    height: 4.5vw;
+    width: 21.9vw;
+    background-color: rgba(172, 172, 255, 0.3);
+    border-radius: 0px 0px 23px 23px;
+    border: 1px solid black;
+  }
 
-#checkoutButton {
-margin-top: 14px; /* Adjust the margin as needed */
-font-family: 'Outfit', sans-serif;
-background-color: #89D0D1;
-color: white;
-border: none;
-font-size: 1vw;
-padding: 5px 15px 5px 15px;
-border-radius: 5px 5px 5px 5px;
-}
+  #checkoutButton {
+    position: relative;
+    margin-top: 2vw; /* Adjust the margin as needed */
+    font-family: 'Outfit', sans-serif;
+    background-color: #89D0D1;
+    color: white;
+    border: none;
+    font-size: 1vw;
+    padding: .3vw 1vw .3vw 1vw;
+    border-radius: 5px 5px 5px 5px;
+  }
 
-.final-amount{
-font-family: 'Outfit', sans-serif;
-color: #15154E;
-font-weight: 600;
-}
+  #checkoutButton:hover{
+    color: #89D0D1;
+    background-color: #8E8EDB;
+    cursor: pointer;
 
+  }
+
+  .final-amount{
+    position: absolute;
+    font-family: 'Outfit', sans-serif;
+    color: #15154E;
+    margin-top: .25vw;
+    font-weight: 600;
+    font-size: 1vw;
+  }
+
+  .hidden {
+    display: none;
+  }
+
+  /* Style the cartMessage */
+  #cartMessage {
+    color: #4caf50;
+    margin-top: 10px;
+  }
+
+  .quantity-container {
+    display: flex;
+    align-items: center;
+  }
+
+  .quantity-button {
+    cursor: pointer;
+    padding: 5px;
+  }
+
+  .delete-button {
+    cursor: pointer;
+    color: red;
+  }
+
+  .quantity-textbox {
+    position: relative;
+    width: 2vw; 
+    left: .5vw;
+    text-align: center;
+    font-family: 'Outfit', sans-serif;
+    margin: 0 5px; /* Add some margin for better spacing */
+  }
+
+  .total-items-circle {
+    position: relative;
+    top: .5vw;
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    font-size: 1vw;
+    width: 1.5vw;
+    height: 1.5vw;
+    display: inline-block;
+    text-align: center;
+    line-height: 1.5vw;
+    left: 1.6vw; /* Add margin for spacing */
+  }
+
+  /*
+  PAG NAG PINDOT ULI AKO NG 16 OR 22 OZ DI NAG UUPDATE YUNG PRICE
+  YUNG RESPONSIVENESS NIYA DI NAGANA
+  I FIX KO PA YUNG MISMONG LAYOUT NG MY CART
+  CHECKOUT PAGE THEN TAPOS NA
+  */
