--- a/css/AboutUSstyles.css
+++ b/css/AboutUSstyles.css
@@ -7,11 +7,11 @@
     }
 
     body {
-        background: url(../images/img/BG-CIRCLES.png);
+        background: url(../img/BG-CIRCLES.png);
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
-        height: 20vh;
+        height: 220vh;
         background-color: #15154E;
     }
 
@@ -859,9 +859,7 @@
   }
 
   .quantity-textbox {
-    position: relative;
-    width: 2vw; 
-    left: .5vw;
+    width: 40px; /* Adjust the width as needed */
     text-align: center;
     font-family: 'Outfit', sans-serif;
     margin: 0 5px; /* Add some margin for better spacing */
