--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
 }
 
 body {
-    background: url(../images/img/BG-CIRCLES.png);
+    background: url(../img/BG-CIRCLES.png);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -1038,9 +1038,7 @@ nav ul li a{
   }
 
   .quantity-textbox {
-    position: relative;
-    width: 2vw; 
-    left: .5vw;
+    width: 40px; /* Adjust the width as needed */
     text-align: center;
     font-family: 'Outfit', sans-serif;
     margin: 0 5px; /* Add some margin for better spacing */
